@@ -3200,8 +3200,6 @@ table {
 .is-tagbox {
 	float: left;
 }
-
-/* Item associations */
 .item-associations {
 	margin: 0;
 }
