@@ -6934,7 +6934,7 @@ h6 {
 	color: #FF0000;
 	font-weight: bold;
 }
-.enabled{
+.enabled {
 	color: green;
 	font-weight: bold;
 }
@@ -7147,6 +7147,12 @@ h6 {
 .form-horizontal #jform_catid_chzn {
 	vertical-align: middle;
 }
+fieldset.checkboxes input {
+	float: left;
+}
+fieldset.checkboxes li {
+	list-style: none;
+}
 ul.manager .height-50 .icon-folder-2 {
 	height: 35px;
 	width: 35px;
@@ -7204,7 +7210,6 @@ ul.treeselect ul.dropdown-menu li {
 td.has-context {
 	height: 23px;
 }
-/* Item associations */
 .item-associations {
 	margin: 0;
 }
