@@ -621,6 +621,14 @@ h6 { font-size: 12px; line-height: 14px; }
 	}
 }
 
+/* Display checkboxes without bullets in list */
+fieldset.checkboxes input {
+	float: left;
+}
+fieldset.checkboxes li {
+	list-style: none;
+}
+
 /* Media Manager folder icon override */
 ul.manager .height-50 .icon-folder-2 {
 	height: 35px;
