@@ -2183,7 +2183,7 @@ table th[class*="span"],
 	filter: alpha(opacity=40);
 }
 button.close {
-	padding: 0;
+	padding: 3;
 	cursor: pointer;
 	background: transparent;
 	border: 0;
